syntax = "proto3";

message FlatFunc {
    string functionName = 1;
    string dllName = 2;
    string dllPath = 3;
}
